--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "heroku": "^7.33.3",
     "mongodb": "^3.3.3",
+    "sqlite3": "^4.1.0",
     "touch": "^3.1.0"
   },
   "engines": {
