--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/nordstroem92/test#readme",
   "dependencies": {
+    "arest": "^0.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "heroku": "^7.33.3",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.3",
     "sqlite3": "^4.1.0",
     "touch": "^3.1.0"
