--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "dependencies": {
     "arest": "^0.3.0",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "heroku": "^7.33.3",
     "moment": "^2.24.0",
     "mongodb": "^3.3.3",
     "sqlite3": "^4.1.0",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "utf-8-validate": "^5.0.2",
+    "ws": "^7.2.0"
   },
   "engines": {
     "node": "10.16.0"
