--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sqlite3": "^4.1.0",
     "touch": "^3.1.0",
     "utf-8-validate": "^5.0.2",
+    "websocket": "^1.0.30",
     "ws": "^7.2.0"
   },
   "engines": {
