testing websocket on heroku

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "heroku": "^7.33.3",
+    "http": "0.0.0",
     "moment": "^2.24.0",
     "mongodb": "^3.3.3",
     "sqlite3": "^4.1.0",
